syntax = "proto3";

option csharp_namespace = "World";

service Foo {
  rpc AddFooHandler (AddFooRequest) returns (AddFooResult);
  rpc GetFooHandler (GetFooRequest) returns (GetFooResult);
}

message AddFooRequest {
  string Data = 1;
}

message AddFooResult {
}

message GetFooRequest {
  int32 Seq = 1;
}

message GetFooResult {
  repeated string Data = 1;
}